--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta http-equiv="X-US-Compatible" content="ie=edge">
+    <title>word counter</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <input type="text" class="Input" id="input" />
+      <textarea name="" id="input" rows="10"></textarea>
       <p class="number" id="number">0</p>
       <button class="Reset" id="Reset">Reset</button>
+
     </div>
     <script src="./script.js"></script>
   </body>
