--- a/test 1/text.html
+++ b/test 1/text.html
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-  <h2>Word Count: <span id="count">0</span></h2>
-  <textarea id="input" rows="10"></textarea>
+  <textarea placeholder="Enter your text here..."></textarea>
 
-  <script src="./tedt.js"></script>
-
+  <script src="./text.html"></script>
 </body>
 </html>
